--- a/testex/src/styles/box_info.css
+++ b/testex/src/styles/box_info.css
@@ -17,6 +17,13 @@
 	margin-bottom: 10px;
 }
 
+.container-box-title {
+	font-family: 'Inter';
+	margin-left: 10px;
+	margin-top: 10px;
+	color: black;
+}
+
 img {
 	width: 48px;
 	height: 48px;
